{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 308,
  "lineage": "1d28e33a-dc11-e3a0-ed98-5ad7eb33ca4f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-067f5c3d5a99edc80",
            "arn": "arn:aws:ec2:us-west-2:577953653387:instance/i-03c221256a86a208e",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03c221256a86a208e",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "your_key_name",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d645aa79797fad93",
            "private_dns": "ip-10-3-0-119.us-west-2.compute.internal",
            "private_ip": "10.3.0.119",
            "public_ip": "34.214.74.191",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-07a72551f9a614c4b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07d4a3d93e629a0a0",
            "tags": {
              "Name": "bastion ec2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0bc992d505eaac4dd"
            ]
          },
          "dependencies": [
            "aws_key_pair.bastion_key",
            "aws_subnet.connectivity_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "bastion_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:577953653387:internet-gateway/igw-06c0304e9ab10301c",
            "id": "igw-06c0304e9ab10301c",
            "owner_id": "577953653387",
            "tags": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-0bd5f8dcd8d240a94"
          },
          "dependencies": [
            "aws_vpc.connectivity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:577953653387:internet-gateway/igw-0352ab70dc9fad4a4",
            "id": "igw-0352ab70dc9fad4a4",
            "owner_id": "577953653387",
            "tags": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-08ed306a276371cd3"
          },
          "dependencies": [
            "aws_vpc.compute_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bastion_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-076dcd6bf6f874efc",
            "owner_id": "577953653387",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06c0304e9ab10301c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0bd5f8dcd8d240a94"
          },
          "dependencies": [
            "aws_internet_gateway.bastion_internet_gateway",
            "aws_vpc.connectivity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bd3fcce854b871d8",
            "owner_id": "577953653387",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0352ab70dc9fad4a4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-08ed306a276371cd3"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_vpc.compute_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bastion_rta",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a69f92541c8458f",
            "route_table_id": "rtb-076dcd6bf6f874efc",
            "subnet_id": "subnet-07d4a3d93e629a0a0"
          },
          "dependencies": [
            "aws_internet_gateway.bastion_internet_gateway",
            "aws_route_table.bastion_route_table",
            "aws_subnet.connectivity_subnet",
            "aws_vpc.connectivity_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d6bd03ad0ba9df9",
            "route_table_id": "rtb-076dcd6bf6f874efc",
            "subnet_id": "subnet-031b13824b613537c"
          },
          "dependencies": [
            "aws_internet_gateway.bastion_internet_gateway",
            "aws_route_table.bastion_route_table",
            "aws_subnet.connectivity_subnet",
            "aws_vpc.connectivity_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02086ca31377baac1",
            "route_table_id": "rtb-076dcd6bf6f874efc",
            "subnet_id": "subnet-05bc0c4f1e23a3048"
          },
          "dependencies": [
            "aws_internet_gateway.bastion_internet_gateway",
            "aws_route_table.bastion_route_table",
            "aws_subnet.connectivity_subnet",
            "aws_vpc.connectivity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b64a7b282b767fe3",
            "route_table_id": "rtb-0bd3fcce854b871d8",
            "subnet_id": "subnet-03978067601271c40"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_route_table.demo",
            "aws_subnet.compute_subnet",
            "aws_vpc.compute_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040dada279f28c7ab",
            "route_table_id": "rtb-0bd3fcce854b871d8",
            "subnet_id": "subnet-0816ff0fb9d921f03"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_route_table.demo",
            "aws_subnet.compute_subnet",
            "aws_vpc.compute_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fca89e022f5f635c",
            "route_table_id": "rtb-0bd3fcce854b871d8",
            "subnet_id": "subnet-0ad54c8dc64c8a714"
          },
          "dependencies": [
            "aws_internet_gateway.demo",
            "aws_route_table.demo",
            "aws_subnet.compute_subnet",
            "aws_vpc.compute_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:577953653387:security-group/sg-0e05359c7d43ea6c5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e05359c7d43ea6c5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.0.0/16",
                  "10.3.0.0/16",
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "aurora-security-group",
            "name_prefix": "",
            "owner_id": "577953653387",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-06bcb4592bde2578f"
          },
          "dependencies": [
            "aws_vpc.database_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:577953653387:security-group/sg-0e239bc208c468ff9",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e239bc208c468ff9",
            "ingress": [
              {
                "cidr_blocks": [
                  "45.56.183.134/32"
                ],
                "description": "Allow workstation to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-eks-demo-cluster",
            "name_prefix": "",
            "owner_id": "577953653387",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-08ed306a276371cd3"
          },
          "dependencies": [
            "aws_vpc.compute_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-cluster-ingress-workstation-https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "45.56.183.134/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-444309538",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e239bc208c468ff9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "dependencies": [
            "aws_security_group.demo-cluster",
            "aws_vpc.compute_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "compute_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:577953653387:subnet/subnet-03978067601271c40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.0.0/24",
            "id": "subnet-03978067601271c40",
            "map_public_ip_on_launch": true,
            "owner_id": "577953653387",
            "tags": {
              "Name": "compute-subnet",
              "kubernetes.io/cluster/laravel-nairobi-demo": "shared"
            },
            "vpc_id": "vpc-08ed306a276371cd3"
          },
          "dependencies": [
            "aws_vpc.compute_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:577953653387:subnet/subnet-0816ff0fb9d921f03",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.1.0/24",
            "id": "subnet-0816ff0fb9d921f03",
            "map_public_ip_on_launch": true,
            "owner_id": "577953653387",
            "tags": {
              "Name": "compute-subnet",
              "kubernetes.io/cluster/laravel-nairobi-demo": "shared"
            },
            "vpc_id": "vpc-08ed306a276371cd3"
          },
          "dependencies": [
            "aws_vpc.compute_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:577953653387:subnet/subnet-0ad54c8dc64c8a714",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.1.2.0/24",
            "id": "subnet-0ad54c8dc64c8a714",
            "map_public_ip_on_launch": true,
            "owner_id": "577953653387",
            "tags": {
              "Name": "compute-subnet",
              "kubernetes.io/cluster/laravel-nairobi-demo": "shared"
            },
            "vpc_id": "vpc-08ed306a276371cd3"
          },
          "dependencies": [
            "aws_vpc.compute_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "connectivity_subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:577953653387:subnet/subnet-07d4a3d93e629a0a0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.3.0.0/24",
            "id": "subnet-07d4a3d93e629a0a0",
            "map_public_ip_on_launch": false,
            "owner_id": "577953653387",
            "tags": {
              "Name": "connectivity-subnet"
            },
            "vpc_id": "vpc-0bd5f8dcd8d240a94"
          },
          "dependencies": [
            "aws_vpc.connectivity_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:577953653387:subnet/subnet-031b13824b613537c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.3.1.0/24",
            "id": "subnet-031b13824b613537c",
            "map_public_ip_on_launch": false,
            "owner_id": "577953653387",
            "tags": {
              "Name": "connectivity-subnet"
            },
            "vpc_id": "vpc-0bd5f8dcd8d240a94"
          },
          "dependencies": [
            "aws_vpc.connectivity_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:577953653387:subnet/subnet-05bc0c4f1e23a3048",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.3.2.0/24",
            "id": "subnet-05bc0c4f1e23a3048",
            "map_public_ip_on_launch": false,
            "owner_id": "577953653387",
            "tags": {
              "Name": "connectivity-subnet"
            },
            "vpc_id": "vpc-0bd5f8dcd8d240a94"
          },
          "dependencies": [
            "aws_vpc.connectivity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet_1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:577953653387:subnet/subnet-041e18a988d1949d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.2.0.0/24",
            "id": "subnet-041e18a988d1949d1",
            "map_public_ip_on_launch": false,
            "owner_id": "577953653387",
            "tags": {
              "Name": "database-subnet-1"
            },
            "vpc_id": "vpc-06bcb4592bde2578f"
          },
          "dependencies": [
            "aws_vpc.database_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet_2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:577953653387:subnet/subnet-0f49671cd092d9ef2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.2.1.0/24",
            "id": "subnet-0f49671cd092d9ef2",
            "map_public_ip_on_launch": false,
            "owner_id": "577953653387",
            "tags": {
              "Name": "database-subnet-2"
            },
            "vpc_id": "vpc-06bcb4592bde2578f"
          },
          "dependencies": [
            "aws_vpc.database_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet_3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:577953653387:subnet/subnet-039cf6ac451356575",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.2.2.0/24",
            "id": "subnet-039cf6ac451356575",
            "map_public_ip_on_launch": false,
            "owner_id": "577953653387",
            "tags": {
              "Name": "database-subnet-3"
            },
            "vpc_id": "vpc-06bcb4592bde2578f"
          },
          "dependencies": [
            "aws_vpc.database_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "compute_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:577953653387:vpc/vpc-08ed306a276371cd3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0a635fd38ce8660df",
            "default_route_table_id": "rtb-02601ca628df0efcf",
            "default_security_group_id": "sg-036c1196d7f40362b",
            "dhcp_options_id": "dopt-b55322cd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-08ed306a276371cd3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02601ca628df0efcf",
            "owner_id": "577953653387",
            "tags": {
              "Name": "compute-vpc",
              "kubernetes.io/cluster/laravel-nairobi-demo": "shared"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "connectivity_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:577953653387:vpc/vpc-0bd5f8dcd8d240a94",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.3.0.0/16",
            "default_network_acl_id": "acl-0724cd7acda818b21",
            "default_route_table_id": "rtb-002766b6d7bae7eee",
            "default_security_group_id": "sg-0b664426e210acc02",
            "dhcp_options_id": "dopt-b55322cd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0bd5f8dcd8d240a94",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-002766b6d7bae7eee",
            "owner_id": "577953653387",
            "tags": {
              "Name": "connectivity-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "database_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:577953653387:vpc/vpc-06bcb4592bde2578f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-010f2905cba4b3f35",
            "default_route_table_id": "rtb-09983ce7661fe782e",
            "default_security_group_id": "sg-0511972caffd885da",
            "dhcp_options_id": "dopt-b55322cd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06bcb4592bde2578f",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09983ce7661fe782e",
            "owner_id": "577953653387",
            "tags": {
              "Name": "databse-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "compute_connectivity_peering_connection",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0255150d97bda0ecd",
            "peer_owner_id": "577953653387",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-08ed306a276371cd3",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "compute-connectivity-peering-connection"
            },
            "vpc_id": "vpc-0bd5f8dcd8d240a94"
          },
          "dependencies": [
            "aws_vpc.compute_vpc",
            "aws_vpc.connectivity_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "compute_database_peering_connection",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-00026c6369c385bcc",
            "peer_owner_id": "577953653387",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-08ed306a276371cd3",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "compute-database-peering-connection"
            },
            "vpc_id": "vpc-06bcb4592bde2578f"
          },
          "dependencies": [
            "aws_vpc.compute_vpc",
            "aws_vpc.database_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "database_connectivity_peering_connection",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0279b6cbeb5dba982",
            "peer_owner_id": "577953653387",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-06bcb4592bde2578f",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "compute-connectivity-peering-connection"
            },
            "vpc_id": "vpc-0bd5f8dcd8d240a94"
          },
          "dependencies": [
            "aws_vpc.connectivity_vpc",
            "aws_vpc.database_vpc"
          ]
        }
      ]
    }
  ]
}